# deepsci-agent

./: .gitignore  CITATION_FIX.md  COMPARISON_FIX.md  DEMO.md  LICENSE  PDF_FEATURE.md  QUICKSTART_NEW_FEATURES.md  README.md  deepsci_chat.py  demo_new_features.py  pyproject.toml  requirements.txt  test_compare.py  test_llm.py
data/: citation_cache.json
data/vectordb/: chroma.sqlite3
deepsci/: __init__.py
deepsci/analysis/: __init__.py  citation_graph.py  graph_visualizer.py
deepsci/cli/: interactive.py  main.py
deepsci/llm/: local_llm.py
deepsci/search/: vector_store.py
deepsci/sources/: __init__.py  arxiv_client.py  citation_cache.py  citation_client.py  pdf_processor.py  pubmed_client.py  scholar_client.py
docs/: CITATION_METRICS.md  FEATURES.md  NEW_FEATURES.md  VECTOR_SEARCH_EXPLAINED.md
